--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -12,7 +12,7 @@
     {
       "id": "asset-library",
       "title": "My Assets",
-      "environments": [ "Edit" ],
+      "environments": [ "edit" ],
       "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html?rail=true",
       "isPalette": true,
       "includePaths": [ "**.docx**" ],
