--- a/.github/workflows/external-css-sync.yaml
+++ b/.github/workflows/external-css-sync.yaml
@@ -11,15 +11,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Execute curl command 1
+    - name: Install jq
+      run: |
+        sudo apt-get update -y
+        sudo apt-get install jq -y
+
+    - name: Fetch Header UI and Extract LSGCSS
       run: |
         curl https://www.walgreens.com/common/v1/headerui | jq -r '.clientLSGCSSContent' > external-styles/header-lsg-css-content.css
 
-    - name: Execute curl command 2
+    - name: Fetch Header UI and Extract CSS
       run: |
         curl https://www.walgreens.com/common/v1/headerui | jq -r '.clientCSSContent' > external-styles/header-css-content.css
 
-    - name: Execute curl command 3
+    - name: Fetch Footer UI and Extract LSGCSS
       run: |
         curl https://www.walgreens.com/common/v1/footerui | jq -r '.clientLSGCSSContent' > external-styles/footer-lsg-css-content.css
 
