--- a/.github/workflows/external-css-sync.yaml
+++ b/.github/workflows/external-css-sync.yaml
@@ -29,9 +29,10 @@ jobs:
         curl https://www.walgreens.com/common/v1/footerui | jq -r '.clientLSGCSSContent' > external-styles/footer-lsg-css-content.css
 
     - name: Commit and Push Changes
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add .
         git commit -m "Update header-lsg-css-content.css, header-css-content.css, and footer-lsg-css-content.css"
-        git push
+        git push origin HEAD:main
