--- a/.github/workflows/external-css-sync.yaml
+++ b/.github/workflows/external-css-sync.yaml
@@ -49,3 +49,4 @@ jobs:
         branch: main
         file_pattern: '*-css-content.css'
         commit_message: 'Update header/footer dynamic css'
+        push_options: --force
